verfication du pom